@@ -170,6 +170,11 @@
     <component-type>org.apache.myfaces.HtmlCommandSortHeader</component-type>
     <component-class>org.apache.myfaces.custom.sortheader.HtmlCommandSortHeader</component-class>
   </component>
+  
+  <component>
+     <component-type>org.apache.myfaces.HtmlTag</component-type>
+     <component-class>org.apache.myfaces.custom.htmlTag.HtmlTag</component-class>
+  </component>
 
   <component>
     <component-type>org.apache.myfaces.InputHtml</component-type>
@@ -633,11 +638,11 @@
           <renderer-type>org.apache.myfaces.Stylesheet</renderer-type>
           <renderer-class>org.apache.myfaces.custom.stylesheet.StylesheetRenderer</renderer-class>
       </renderer>
-
+      
       <renderer>
           <component-family>javax.faces.Output</component-family>
-          <renderer-type>org.apache.myfaces.DivRenderer</renderer-type>
-          <renderer-class>org.apache.myfaces.custom.div.DivRenderer</renderer-class>
+          <renderer-type>org.apache.myfaces.HtmlTagRenderer</renderer-type>
+          <renderer-class>org.apache.myfaces.custom.htmlTag.HtmlTagRenderer</renderer-class>
       </renderer>
 
        <renderer>
