@@ -8,6 +8,7 @@ Changes in Release 1.0.10
 * added aliasBeansScope tag to make configuration with multiple aliasBean easier to manage.
 * added displayValueOnly functionality which renders input components as if they were output components when this attribute is set to true, works on most extended components.
 * added forceId to many more of the extended components
+* added x:htmlTag component
 * closed MYFACES-13
 * closed MYFACES-34
 * closed MYFACES-84
